--- a/airbnb/.gitignore
+++ b/airbnb/.gitignore
@@ -20,10 +20,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/.metadata/
 
 airbnb/.settings/
-airbnb/.project
-airbnb/.classpath
-airbnb/bin
 airbnb/build/
+airbnb/.classpath
+airbnb/.project
+airbnb/target/
