Button Become a host - changing into Add new place : FIXED

--- a/src/main/resources/airbnbTestDB.properties
+++ b/src/main/resources/airbnbTestDB.properties
@@ -1,6 +1,6 @@
 #Sat Apr 28 11:19:22 EEST 2018
 HOST=localhost
-DB_NAME=airbnbtestdb
+DB_NAME=/airbnbtestdb
 DB_USERNAME=root
-DB_PASSWORD=1234t
+DB_PASSWORD=Kp.9205056346
 PORT=3306
