--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,11 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4</version>
+</dependency>
 		<!-- Apache Commons IO -->
 		<dependency>
 			<groupId>commons-io</groupId>
